Big Audit Refactor: small refactorings